ajout du logo strasbourg aime ses étudiants

--- a/index.html
+++ b/index.html
@@ -1459,6 +1459,7 @@ Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
                 <a href="http://blockchain-valley.io/" target="_blank"><img alt="Blockchain Valley" src="images/contents/blockchain-valley.png"></a>
                 <a href="https://upperrhine40.eu/" target="_blank"><img alt="UpperRhine4.0" src="images/contents/upper-rhine40.jpg"></a>
                 <a href="https://www.impact-positif.fr/" target="_blank"><img alt="Impact positif" src="images/contents/logo-square.jpg" width="160"></a>
+                <a href="https://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasetudiants.png" alt="Strasbourg aime ses étudiants" width="300"></a>
                 <!-- devient partenaire Lundi 17/06/2019 -->
                 <a href="https://upperrhine40.eu/" target="_blank"><img alt="" src="images/contents/interreg2018.jpg"><br></a>
                 <!-- inclus dans upper rhine-->
