ajout du bouton planning

--- a/de/index.html
+++ b/de/index.html
@@ -453,23 +453,23 @@
 
 
     <section class="section" id="planning">
-        <!--<div class="container">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Click here to see the full event schedule</a></div>
-            </div>
-        </div>
-    </section>-->
+                <div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="../planning.pdf" target="_blank" class="btn btn-lg btn-primary">Klicken Sie hier, um den vollständigen Veranstaltungsplan anzuzeigen</a></div>
+                <!--        </div>
+                    </div>
+                </section>
 
 
-        <!--<section id="closing" class="closing-section section-dark section">
+                    <section id="closing" class="closing-section section-dark section">
 
-            <div class="section-background">
+                        <div class="section-background">
 
-                <div class="section-background-image parallax" data-stellar-ratio="0.4">
-                    <img src="/images/backgrounds/MakerBot_Replicator_2.jpg" alt="" style="opacity: 0.15;">
-                </div>
+                            <div class="section-background-image parallax" data-stellar-ratio="0.4">
+                                <img src="/images/backgrounds/MakerBot_Replicator_2.jpg" alt="" style="opacity: 0.15;">
+                            </div>
 
-            </div>-->
+                        </div>-->
 
         <div class="container">
             <div class="row">
