--- a/en/index.html
+++ b/en/index.html
@@ -441,10 +441,10 @@
 
 
     <section class="section" id="planning">
-        <!--<div class="container">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Click here to see the full event schedule</a></div>
-            </div>
+                <div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="../planning.pdf" target="_blank" class="btn btn-lg btn-primary">Click here to see the full event schedule</a></div>
+        <!--    </div>
         </div>
     </section>-->
 
