--- a/index.html
+++ b/index.html
@@ -366,9 +366,8 @@
     <section class="section" id="planning">
         <div class="container">
             <div class="row">
-                <!--
 <div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Consulter le planning complet</a></div>
-</div>
+<!--</div>
 </div>
 </section>
 
