--- a/index.html
+++ b/index.html
@@ -170,31 +170,14 @@
 </div>
 </div>-->
                     <div class="newsbox col-md-10 col-md-offset-1">
-                        <div class="text-center" style="font-size: 18px;color:#fff;padding-bottom: 10px;">
-                            <i class="fa fa-calendar"></i> &nbsp;Workshops
-                            de préparation les 11/09, 17/09 et 19/09
-                        </div>
-                        <!--Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>-->
                         <div class="row" style="margin-bottom: 15px;">
-                            <div class="col-md-6">
-                                <a class="btn btn-default" href="https://framaforms.org/session-blockchain-en-vue-du-hicamp-2019-1563798633" style="width: 100%;" target="_blank">11/09 à 9h chez ES : Blockchain</a>
-                            </div>
-                            <div class="col-md-6">
-                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-niveau-avance-70623034397" style="width: 100%;" target="_blank">17/09 à 9h chez ES : Conception inventive pour les initiés</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-debutant-70621519867" style="width: 100%;" target="_blank">17/09 à 17h30 aux Forges Numériques: Conception inventive pour les débutants</a>
-                            </div>
-                            <div class="col-md-6">
-                                <a class="btn btn-default" href="https://framaforms.org/session-ux-en-vue-du-hicamp-2019-1563800996" style="width: 100%;" target="_blank">19/09 à 9h chez ES : Expérience utilisateur et client</a>
-                            </div>
-                        </div>
-                        <div class="row">
                             <div class="col-md-12">
-                                <br>Et pour aller plus loin, découvrez les méthodes agiles SCRUM avec des LEGOs grâce à Sogeti...<br><br>
-                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-71619735557" style="width: 100%;" target="_blank">Workshop Lego for SCRUM le 02/10 à 17h à Sogeti</a>
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" style="width: 100%;" target="_blank">12/10 à 16h30 : La fabrique du droit face à l'innovation</a>
+                            </div>
+                        </div>
+                        <div class="row" style="margin-bottom: 15px;">
+                            <div class="col-md-12">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" style="width: 100%;" target="_blank">13/10 à 16h30 : Cérémonie de clôture</a>
                             </div>
                         </div>
                         <div class="text-center" style="font-size: 18px;color:#fff;padding-top: 8px;">
@@ -216,6 +199,34 @@
 </div>
 </div>-->
                             <div class="clear-columns clearfix visible-xs-block visible-sm-block"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <br>Et pour aller plus loin, découvrez les méthodes agiles SCRUM avec des LEGOs grâce à Sogeti...<br><br>
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-71619735557" style="width: 100%;" target="_blank">Workshop Lego for SCRUM le 02/10 à 17h à Sogeti</a>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="text-center" style="font-size: 18px;color:#fff;padding-bottom: 10px;">
+                            <i class="fa fa-calendar"></i> &nbsp;Workshops
+                            de préparation les 11/09, 17/09 et 19/09
+                        </div>
+                        <!--Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>-->
+                        <div class="row" style="margin-bottom: 15px;">
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://framaforms.org/session-blockchain-en-vue-du-hicamp-2019-1563798633" style="width: 100%;" target="_blank">11/09 à 9h chez ES : Blockchain</a>
+                            </div>
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-niveau-avance-70623034397" style="width: 100%;" target="_blank">17/09 à 9h chez ES : Conception inventive pour les initiés</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-debutant-70621519867" style="width: 100%;" target="_blank">17/09 à 17h30 aux Forges Numériques: Conception inventive pour les débutants</a>
+                            </div>
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://framaforms.org/session-ux-en-vue-du-hicamp-2019-1563800996" style="width: 100%;" target="_blank">19/09 à 9h chez ES : Expérience utilisateur et client</a>
+                            </div>
                         </div>
                     </div>
                     <div class="hero-features row" style="margin-top: 45px;">
@@ -706,13 +717,13 @@ Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
                         <img alt="Virginie ATHIAS" class="team-member-picture" src="images/contents/jury/virginie-athias.jpg">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Virginie ATHIAS</h4>
-                            <div class="team-member-position">Conseil en transformation digitale et gestion de projets stratégiques</div>
+                            <div class="team-member-position">Conseils en transformation digitale</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
                     <div class="team-member">
-                        <img alt="Virginie ATHIAS" class="team-member-picture" src="images/contents/coach/julien-brodier.png">
+                        <img alt="Julien BRODIER" class="team-member-picture" src="images/contents/coach/julien-brodier.png" style="max-height: 315px;">
                         <div class="team-member-text">
                             <h4 class="team-member-name">Julien BRODIER</h4>
                             <div class="team-member-position">Blockchain</div>
@@ -728,12 +739,83 @@ Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member">
+                        <img alt="François KORMANN" class="team-member-picture" src="images/contents/jury/francois-kormann.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">François KORMANN</h4>
+                            <div class="team-member-position">Prototypage</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member even">
+                        <img alt="Pasquine CONSTANT" class="team-member-picture" src="images/contents/coach/pasquine-constant.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Pasquine CONSTANT</h4>
+                            <div class="team-member-position">Marketing | Project Manager</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member">
+                        <img alt="Matthieu VAILLY" class="team-member-picture" src="images/contents/coach/matthieu-vailly.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Matthieu VAILLY</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member even">
+                        <img alt="Frédéric CAMBECEDES" class="team-member-picture" src="images/contents/coach/frederic-cambecedes.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Frédéric CAMBECEDES</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>
+                <!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member">
+                        <img alt="Olivier GROSSE" class="team-member-picture" src="images/contents/coach/olivier-grosse.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Olivier GROSSE</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>-->
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member even">
+                        <img alt="Alexis MARTIN" class="team-member-picture" src="images/contents/coach/alexis-martin.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Alexis MARTIN</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+                    <div class="team-member">
+                        <img alt="Arnaud PHILIBERT" class="team-member-picture" src="images/contents/coach/arnaud-philibert.jpg">
+                        <div class="team-member-text">
+                            <h4 class="team-member-name">Arnaud PHILIBERT</h4>
+                            <div class="team-member-position"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- <section class="team-section section" style="padding-top: 0;">
-
-<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+    <section class="team-section section" style="padding-top: 0;">
+        <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+            <div class="team-member even">
+                <img alt="Niels KOLMER" class="team-member-picture" src="images/contents/coach/niels-kolmer.jpg">
+                <div class="team-member-text">
+                    <h4 class="team-member-name">Niels KOLMER</h4>
+                    <div class="team-member-position">Business Model</div>
+                </div>
+            </div>
+        </div>
+<!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 <div class="team-member">
 <img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
 <div class="team-member-text">
@@ -838,9 +920,8 @@ Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
 </div>
 </div>
 </div> -->
-    <!-- Lundi 17/06/2019 en attente de coachs/jury
 </section>
-
+<!--
 <section class="team-section section" style="padding-top: 0;">
 
 <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
@@ -1402,7 +1483,7 @@ Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
             <div class="sponsors-row" data-animation="bounceIn">
                 <h3 style="font-size: 17px;">Silver Sponsors</h3>
                 <br>
-                <a href="http://www.caisse-epargne.fr/" target="_blank"><img alt="Caisse d'Epargne Alsace" src="images/contents/caisse-epargne.jpg"></a>
+                <!--<a href="http://www.caisse-epargne.fr/" target="_blank"><img alt="Caisse d'Epargne Alsace" src="images/contents/caisse-epargne.jpg"></a>-->
                 <a href="http://www.hagergroup.com/" target="_blank"><img alt="Hager" src="images/contents/hager-group.png"></a>
                 <a href="http://www.rhenatic.eu/" target="_blank"><img alt="Rhénatic" src="images/contents/rhenatic.png" style="width: 180px;"></a>
                 <a href="http://www.strataggem.com/" style="background: white; padding: 8px;" target="_blank"><img alt="Strataggem" src="images/contents/strataggem.png"></a>
