added conferences with texts and images

--- a/de/index.html
+++ b/de/index.html
@@ -256,35 +256,6 @@
                                    style="width: 100%;" target="_blank">Workshop Lego für SCRUM am 02/10 um 17h bei Sogeti</a>
                             </div>
                         </div>
-                        <br>
-                        <div class="text-center" style="font-size: 18px;color:#fff;padding-bottom: 10px;"><i
-                                class="fa fa-calendar"></i> &nbsp;Preparation Workshops am 11/09, 17/09 und 19/09
-                        </div>
-                        <div class="row" style="margin-bottom: 15px;">
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://framaforms.org/session-blockchain-en-vue-du-hicamp-2019-1563798633"
-                                   style="width: 100%;" target="_blank">11/09 um 9h bei ES : Blockchain</a>
-                            </div>
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-niveau-avance-70623034397"
-                                   style="width: 100%;"
-                                   target="_blank">17/09 um 9h bei ES : Inventive design für Initiierten</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-debutant-70621519867"
-                                   style="width: 100%;" target="_blank">17/09 um 17h30 bei die Forges Numériques : Inventive design für Anfänger</a>
-                            </div>
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://framaforms.org/session-ux-en-vue-du-hicamp-2019-1563800996"
-                                   style="width: 100%;" target="_blank">19/09 um 17h bei ES : Customer and user experience</a>
-                            </div>
-                        </div>
                     </div>
                     <div class="hero-features row" style="margin-top: 45px;">
 
@@ -643,94 +614,117 @@
 
     </section>
 
-    <!--<section id="keynotes" class="section section-dark">
+    <section class="section section-dark" id="keynotes">
 
         <div class="section-background">
             <div class="section-background-image parallax" data-stellar-ratio="0.4">
-                <img src="/images/backgrounds/background-keynote-hic.jpg" alt="" style="opacity: 0.08;">
+                <img alt="" src="../images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
             </div>
         </div>
-
         <div class="container">
 
             <h2 class="section-heading text-center">Keynotes</h2>
-            <p class="col-md-12 text-center">Des keynotes gratuites et <strong>ouvertes au public</strong></p>
+            <p class="col-md-12 text-center">Kostenlose Keynotes für <strong>die Öffentlichkeit zugänglich</strong></p>
 
             <div class="row">
-                <div class="about-text col-md-4">
-                    <h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 11h à 12h</h3>
-                    <img src="/images/contents/keynote-industrie4-0.jpg" style="width: 100%;" alt="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" title="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" />
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 16:30 bis 17:30 Uhr</h3>
+                    <img alt="Das Rechtsgefüge angesichts von Innovationen" src="../images/contents/conference.jpg"
+                         style="width: 100%;" title="Das Rechtsgefüge angesichts von Innovationen"/>
 
-                    <h3>Made Different : préparer les entreprises à l'industrie 4.0</h3>
+                    <h3>Das Rechtsgefüge angesichts von Innovationen</h3>
 
                     <div class="lead">
-                        <p style="font-size: 18px;">Fort de ses 30 ans d'expérience dans l'industrie en tant que chef de projet, superviseur pour l'industrialisation et directeur technique pour une PME, Jean-Claude a rejoint Sirris en 2006. L’une des missions confiées à M. Noben pour ce centre de recherche consiste à préparer les entreprises à l’industrie 4.0, via le programme Made Different qu'il nous présentera. Made Different Digital Wallonia est un programme de sensibilisation et d’accompagnement des entreprises industrielles wallonnes dans leur transformation à l’industrie 4.0.</p>-->
-    <!--<div class="read_more">
-        <a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-        <div class="read_more_content">
-            <p>À travers ses expériences, Jean-Daniel Weisz, associé du Cabinet KOHLER C&amp;C propose des clés pour comprendre comment l’État et les industries allemandes s'adaptent à la numérisation des processus industriels. En constatant que le changement fait aujourd'hui partie intégrante de la dynamique d'entreprise, celui-ci n'est plus perçu comme une phase d'incertitude, mais est conçu comme un avantage compétitif qui crée de la valeur. En France sommes-nous prêts à de telles modifications ? Pouvons-nous saisir cette opportunité de différenciation conjointement avec nos voisins d'Outre-Rhin ?<br>Le cabinet Kohler C&amp;C, experts en stratégie de transformation et en développement des organisations a publié en mars 2016 l’ouvrage « Industrie 4.0 – Les défis de la transformation numérique du modèle industriel allemand » à la documentation Française.</p>
-        </div>
-    </div>-->
-    <!--</div>
-    <p style="margin-bottom: 0;">Présentée par Jean-Claude Noben, Directeur Régional Wallonie Sirris</p><br>
-    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 35px;" src="/images/contents/adira.png" alt="Adira"></a></p>
+                        <p style="font-size: 18px;">Recht und Innovation werden immer noch als Gegensätze dargestellt: Innovationen brauchen ein Umfeld mit wenig Regulierung, wenn sie entstehen sollen, wenn das Gesetz sie einschränken soll. Aber was
+                            würde passieren, wenn wir das Gesetz anders verstehen würden? Iris Champagne, Forscherin an der Pariser Dauphine-Universität, schlägt vor, diese Frage mit Hilfe der Konzeptionstheorien zu beantworten, um das Recht auf
+                            Unterstützung radikaler Innovationen zu konzipieren.</p>
+                    </div>
+                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
+                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
+                    </p>-->
 
-    <div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-jean-claude-noben-directeur-regional-wallonie-sirris-38448525575" target="_blank" class="btn btn-primary">J'y vais !</a></div>
-</div>
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">Ich gehe zur
+                        Konferenz!</a></div>
+                </div>
 
-<div class="about-text col-md-4">
-    <h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 15h à 16h</h3>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 11 bis 12 Uhr</h3>
 
-    <img src="/images/contents/keynote-blockchain.jpg" style="width: 100%;" alt="La blockchain un véritable levier pour l’industrie" title="La blockchain un véritable levier pour l’industrie" />
+                    <img alt="Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie" src="../images/contents/conference2.jpg.jpg" style="width: 100%;"
+                         title="Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie"/>
 
-    <h3>La blockchain, un véritable levier pour l’industrie ?</h3>
+                    <h3>Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie</h3>
 
-    <div class="lead">
-        <p style="font-size: 18px;">La technologie blockchain* offre de nombreuses opportunités pour le monde de l'industrie. En permettant l’automatisation distribuée des transactions, la blockchain change la façon de "faire des affaires", les relations fournisseurs – clients- sous-traitants, en les centrant sur la confiance. Les premières applications, crypto monnaies ou assurances, font aujourd’hui place à des expérimentations dans bien d’autres domaines comme la distribution d’énergie ou la supply chain. Quels sont ces nouveaux champs d’investigation ? Comment être confiant dans cette nouvelle Technologie ?
-        </p>-->
-    <!--<div class="read_more">
-        <a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-        <div class="read_more_content">
-            <p>Après avoir occupé plusieurs postes aux diverses responsabilités dans de grandes entreprises et avoir créer sa propre entreprise, il entre en 2014 à l'Inria, établissement de recherche dédié aux sciences du numérique. Il y exercera en tant que chargé des partenariats et de la propriété intellectuelle jusqu'à récemment. Suite à la campagne « Horizon Start-up » de 2015, organisée par l'Inria et qui avait pour objectif d'attirer l'attention des chercheurs vers la création d'entreprise, Arnaud Laprévote décide lui aussi de se lancer dans l'aventure entrepreneuriale en créant début 2016, Lybero.net. Ce système innovant qui permet de protéger des données par une technologie de chiffrement contenant une clé de recouvrement à seuil, sonnera peut-être le glas de la cybercriminalité.</p>
-        </div>
-    </div>-->
-    <!--</div>
-    <p>
-        Keynote de Pierre Banzet et Franck Augustin de la société Transchain<br>
-    </p>-->
-    <!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="/images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>-->
+                    <div class="lead">
+                        <p style="font-size: 18px;">Im Kontext der Globalisierung wird bei der Transformation von Unternehmen häufig ein multikulturelles Umfeld berücksichtigt, beispielsweise der Standort von Tochterunternehmen, Zulieferern oder die
+                            Einstellung von Mitarbeitern. Der Erfolg dieser verschiedenen Situationen setzt voraus, dass die Unterschiede berücksichtigt werden Sicht, Arbeitsgewohnheiten, Prozess. Auf dieser Rheinseite wäre Deutsch wirklich
+                            pragmatischer?
+                        </p>
+                    </div>
+                    <!--<p>
+                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
+                    </p>
+                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
+                                                                                           target="_blank"><img
+                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">Ich gehe zur Konferenz!</a></div>
+                </div>
 
-    <!--<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-keynote-hic-au-dela-de-la-speculation-la-blockchain-un-veritable-levier-pour-lindustrie-38491329603" target="_blank" class="btn btn-primary">J'y vais !</a></div>
-</div>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 14:30 bis 15:30 Uhr</h3>
 
-<div class="about-text col-md-4">
-    <h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 17h à 18h</h3>
+                    <img alt="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie" src="../images/contents/conference3.jpg.jpg"
+                         style="width: 100%;" title="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie"/>
 
-    <img src="/images/contents/keynote-agilite.jpg" style="width: 100%;" alt="L'agilité dans l’innovation managériale" title="L'agilité dans l’innovation managériale" />
+                    <h3>DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie</h3>
 
-    <h3>L'agilité dans l’innovation managériale</h3>
+                    <div class="lead">
+                        <p style="font-size: 18px;">Um die Geschäftsleistung zum Zeitpunkt des 4.0 zu steigern, muss die gesamte Kette des Produkts in den Prozess der Digitalisierung des Verkaufs auf der Bestellung von der Produktion bis zur
+                            Lieferung integriert werden. Die Qualität des so konzipierten digitalen Kabels ist entscheidend für den Erfolg der Transformation.</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <p>
+                        Keynote von Frederic Sanuy<br>
+                    </p>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">Ich gehe zur
+                        Konferenz!</a>
+                    </div>
+                </div>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Sonntag, 13. Oktober von 16.30 bis 19 Uhr</h3>
 
-    <div class="lead">
-        <p style="font-size: 18px;">De grands défis attendent l’entreprise 4.0. Elle devra être connectée et agile ! Scandé comme un dogme, dans cette interpellation, chacun y voit midi à sa porte et se lance dans le changement avec enthousiasme ou sous la contrainte. Les PME sont-elles prêtes à ce changement ? Croient-elles suffisamment en leur puissance inventive pour ne pas subir ? Sommes-nous dans une nouvelle crise de la modernité ? ou dans une Révolution collaborative ?</p>
-        <div class="read_more">
-            <a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-            <div class="read_more_content">
-                <p>Depuis 2009, Jean-Sébastien Desjonqueres accompagne des projets en conduite de changement des organisations, à la fois auprès d’acteurs privés et d¹institutions à partir de Luxembourg où il réside.</p>
+                    <img alt="Abschlussabend" src="../images/contents/cloture.jpg"
+                         style="width: 100%;" title="Abschlussabend"/>
+
+                    <h3>Abschlussabend</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Sie arbeiteten 54 Stunden ohne Unterbrechung! Sie waren am Ende ihrer Idee angelangt. Gemeinsam haben sie eine Lösung gefunden und sind bereit, diese mit der Öffentlichkeit zu teilen und dem Urteil
+                            der Jury zu unterwerfen. Spannung!</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                        <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                        <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">Ich gehe zur Konferenz!</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <p>
-        Présentée par Jean-Sébastien Desjonqueres<br>
-    </p><br>
-    <p>Conférence suivie d'une collation, organisée en partenariat avec &nbsp;<a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="/images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>
-    <div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-lagilite-dans-linnovation-manageriale-38494510116" target="_blank" class="btn btn-primary">J'y vais !</a></div>
-</div>
-
-</div>
-
-</div>
-
-</section>-->
+    </section>
 
     <!-- TEAM
     ================================= -->
