--- a/en/index.html
+++ b/en/index.html
@@ -256,37 +256,6 @@
                             </div>
                         </div>
                         <br>
-                        <div class="text-center" style="font-size: 18px;color:#fff;padding-bottom: 10px;"><i
-                                class="fa fa-calendar"></i> &nbsp;Preparation Workshops on 11/09, 17/09 and 19/09
-                        </div>
-                        <!--Pour cette troisième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
-                        Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
-                        L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>-->
-                        <div class="row" style="margin-bottom: 15px;">
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://framaforms.org/session-blockchain-en-vue-du-hicamp-2019-1563798633"
-                                   style="width: 100%;" target="_blank">11/09 at 9h at ES : Blockchain</a>
-                            </div>
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-niveau-avance-70623034397"
-                                   style="width: 100%;"
-                                   target="_blank">17/09 at 9h at ES : Inventive design for initiated</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-debutant-70621519867"
-                                   style="width: 100%;" target="_blank">17/09 at 17h30 at the Forges Numériques : Inventive design for beginners</a>
-                            </div>
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://framaforms.org/session-ux-en-vue-du-hicamp-2019-1563800996"
-                                   style="width: 100%;" target="_blank">19/09 at 17h at ES : Customer and user experience</a>
-                            </div>
-                        </div>
                     </div>
                     <div class="hero-features row" style="margin-top: 45px;">
 
@@ -652,94 +621,113 @@
 
     </section>
 
-    <!--<section id="keynotes" class="section section-dark">
+    <section class="section section-dark" id="keynotes">
 
         <div class="section-background">
             <div class="section-background-image parallax" data-stellar-ratio="0.4">
-                <img src="/images/backgrounds/background-keynote-hic.jpg" alt="" style="opacity: 0.08;">
+                <img alt="" src="../images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
             </div>
         </div>
-
         <div class="container">
 
             <h2 class="section-heading text-center">Keynotes</h2>
-            <p class="col-md-12 text-center">Des keynotes gratuites et <strong>ouvertes au public</strong></p>
+            <p class="col-md-12 text-center">Free keynotes <strong>open to the public</strong></p>
 
             <div class="row">
-                <div class="about-text col-md-4">
-                    <h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 11h à 12h</h3>
-                    <img src="/images/contents/keynote-industrie4-0.jpg" style="width: 100%;" alt="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" title="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" />
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 16:30 to 17:30</h3>
+                    <img alt="The fabric of law in the face of innovation" src="../images/contents/conference.jpg"
+                         style="width: 100%;" title="The fabric of law in the face of innovation"/>
 
-                    <h3>Made Different : préparer les entreprises à l'industrie 4.0</h3>
+                    <h3>The fabric of law in the face of innovation</h3>
 
                     <div class="lead">
-                        <p style="font-size: 18px;">Fort de ses 30 ans d'expérience dans l'industrie en tant que chef de projet, superviseur pour l'industrialisation et directeur technique pour une PME, Jean-Claude a rejoint Sirris en 2006. L’une des missions confiées à M. Noben pour ce centre de recherche consiste à préparer les entreprises à l’industrie 4.0, via le programme Made Different qu'il nous présentera. Made Different Digital Wallonia est un programme de sensibilisation et d’accompagnement des entreprises industrielles wallonnes dans leur transformation à l’industrie 4.0.</p>-->
-    <!--<div class="read_more">
-        <a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-        <div class="read_more_content">
-            <p>À travers ses expériences, Jean-Daniel Weisz, associé du Cabinet KOHLER C&amp;C propose des clés pour comprendre comment l’État et les industries allemandes s'adaptent à la numérisation des processus industriels. En constatant que le changement fait aujourd'hui partie intégrante de la dynamique d'entreprise, celui-ci n'est plus perçu comme une phase d'incertitude, mais est conçu comme un avantage compétitif qui crée de la valeur. En France sommes-nous prêts à de telles modifications ? Pouvons-nous saisir cette opportunité de différenciation conjointement avec nos voisins d'Outre-Rhin ?<br>Le cabinet Kohler C&amp;C, experts en stratégie de transformation et en développement des organisations a publié en mars 2016 l’ouvrage « Industrie 4.0 – Les défis de la transformation numérique du modèle industriel allemand » à la documentation Française.</p>
-        </div>
-    </div>-->
-    <!--</div>
-    <p style="margin-bottom: 0;">Présentée par Jean-Claude Noben, Directeur Régional Wallonie Sirris</p><br>
-    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 35px;" src="/images/contents/adira.png" alt="Adira"></a></p>
+                        <p style="font-size: 18px;">Law and innovation are still presented as opposites: innovations need an environment with little regulation if we want to see them emerge when the law is supposed to limit them. But what would
+                            happen if we began to conceive the law differently? Iris Champagne, researcher at Paris Dauphine University proposes to answer this question by using the theories of conception in order to conceive the right to support
+                            radical innovations.</p>
+                    </div>
+                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
+                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
+                    </p>-->
 
-    <div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-jean-claude-noben-directeur-regional-wallonie-sirris-38448525575" target="_blank" class="btn btn-primary">J'y vais !</a></div>
-</div>
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">I'm going!</a></div>
+                </div>
 
-<div class="about-text col-md-4">
-    <h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 15h à 16h</h3>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 11h to 12h</h3>
 
-    <img src="/images/contents/keynote-blockchain.jpg" style="width: 100%;" alt="La blockchain un véritable levier pour l’industrie" title="La blockchain un véritable levier pour l’industrie" />
+                    <img alt="Intercultural relations between France and Germany in Industry 4.0" src="../images/contents/conference2.jpg" style="width: 100%;"
+                         title="Intercultural relations between France and Germany in Industry 4.0"/>
 
-    <h3>La blockchain, un véritable levier pour l’industrie ?</h3>
+                    <h3>Intercultural relations between France and Germany in Industry 4.0</h3>
 
-    <div class="lead">
-        <p style="font-size: 18px;">La technologie blockchain* offre de nombreuses opportunités pour le monde de l'industrie. En permettant l’automatisation distribuée des transactions, la blockchain change la façon de "faire des affaires", les relations fournisseurs – clients- sous-traitants, en les centrant sur la confiance. Les premières applications, crypto monnaies ou assurances, font aujourd’hui place à des expérimentations dans bien d’autres domaines comme la distribution d’énergie ou la supply chain. Quels sont ces nouveaux champs d’investigation ? Comment être confiant dans cette nouvelle Technologie ?
-        </p>-->
-    <!--<div class="read_more">
-        <a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-        <div class="read_more_content">
-            <p>Après avoir occupé plusieurs postes aux diverses responsabilités dans de grandes entreprises et avoir créer sa propre entreprise, il entre en 2014 à l'Inria, établissement de recherche dédié aux sciences du numérique. Il y exercera en tant que chargé des partenariats et de la propriété intellectuelle jusqu'à récemment. Suite à la campagne « Horizon Start-up » de 2015, organisée par l'Inria et qui avait pour objectif d'attirer l'attention des chercheurs vers la création d'entreprise, Arnaud Laprévote décide lui aussi de se lancer dans l'aventure entrepreneuriale en créant début 2016, Lybero.net. Ce système innovant qui permet de protéger des données par une technologie de chiffrement contenant une clé de recouvrement à seuil, sonnera peut-être le glas de la cybercriminalité.</p>
-        </div>
-    </div>-->
-    <!--</div>
-    <p>
-        Keynote de Pierre Banzet et Franck Augustin de la société Transchain<br>
-    </p>-->
-    <!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="/images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>-->
+                    <div class="lead">
+                        <p style="font-size: 18px;">In a context of globalization, the transformation of companies is often taking into account multicultural environments, by the location of subsidiaries, suppliers, the recruitment of employees ...
+                            the success of these various situations requires to be aware of the differences point of view, work habits, process. Seen on this side of the Rhine, German would be really more pragmatic?
+                        </p>
+                    </div>
+                    <!--<p>
+                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
+                    </p>
+                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
+                                                                                           target="_blank"><img
+                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">I'm going!</a></div>
+                </div>
 
-    <!--<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-keynote-hic-au-dela-de-la-speculation-la-blockchain-un-veritable-levier-pour-lindustrie-38491329603" target="_blank" class="btn btn-primary">J'y vais !</a></div>
-</div>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 14:30 to 15:30</h3>
 
-<div class="about-text col-md-4">
-    <h3 style="font-size: 22px; font-weight: bold;">Samedi 14 octobre de 17h à 18h</h3>
+                    <img alt="DAM-PIM-CMS, the customer relationship in the industry 4.0" src="../images/contents/conference3.jpg"
+                         style="width: 100%;" title="DAM-PIM-CMS, the customer relationship in the industry 4.0"/>
 
-    <img src="/images/contents/keynote-agilite.jpg" style="width: 100%;" alt="L'agilité dans l’innovation managériale" title="L'agilité dans l’innovation managériale" />
+                    <h3>DAM-PIM-CMS, the customer relationship in the industry 4.0</h3>
 
-    <h3>L'agilité dans l’innovation managériale</h3>
+                    <div class="lead">
+                        <p style="font-size: 18px;">To increase its business performance at the time of the 4.0, it is to integrate the whole chain of the product in its process of digitization of the sale on the order, from the production to the
+                            delivery. The quality of the digital wire thus conceived is essential to the success of the transformation.</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <p>
+                        Frederic Sanuy's keynote<br>
+                    </p>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">I'm going!</a>
+                    </div>
+                </div>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Sunday, October 13 from 16h30 to 19h</h3>
+                    <img alt="Closing evening" src="../images/contents/cloture.jpg"
+                         style="width: 100%;" title="Closing evening"/>
 
-    <div class="lead">
-        <p style="font-size: 18px;">De grands défis attendent l’entreprise 4.0. Elle devra être connectée et agile ! Scandé comme un dogme, dans cette interpellation, chacun y voit midi à sa porte et se lance dans le changement avec enthousiasme ou sous la contrainte. Les PME sont-elles prêtes à ce changement ? Croient-elles suffisamment en leur puissance inventive pour ne pas subir ? Sommes-nous dans une nouvelle crise de la modernité ? ou dans une Révolution collaborative ?</p>
-        <div class="read_more">
-            <a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
-            <div class="read_more_content">
-                <p>Depuis 2009, Jean-Sébastien Desjonqueres accompagne des projets en conduite de changement des organisations, à la fois auprès d’acteurs privés et d¹institutions à partir de Luxembourg où il réside.</p>
+                    <h3>Closing evening</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">They worked 54 hours non stop! They went to the end of their idea. Together, they have found a solution and are ready to share it with the public and submit it to the verdict of the jury.
+                            Suspense!</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                        <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                        <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">I'm going!</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <p>
-        Présentée par Jean-Sébastien Desjonqueres<br>
-    </p><br>
-    <p>Conférence suivie d'une collation, organisée en partenariat avec &nbsp;<a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="/images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>
-    <div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-lagilite-dans-linnovation-manageriale-38494510116" target="_blank" class="btn btn-primary">J'y vais !</a></div>
-</div>
-
-</div>
-
-</div>
-
-</section>-->
+    </section>
 
     <!-- TEAM
     ================================= -->
